--- a/src/Component/Banner.css
+++ b/src/Component/Banner.css
@@ -3,16 +3,11 @@
     justify-content: center;
     margin: 0 auto;
     transition: 0.2s ease;
-
 }
 
-.container{
-    /* display: flex;
-    justify-content: center; */
+.container-b{
     margin: 0 auto;
     height: auto;
-    
-
 }
 
 .text-popUp.active{
@@ -32,8 +27,6 @@
     transition: 0.3s ease;
     top: 0;
     z-index: 11;
-    
-
 }
 
 .text-popUp h1{
@@ -43,6 +36,7 @@
     transition: 0.3s ease;
     /* font-weight: 500; */
 }
+
 .text-popUp.active h1{
     display: block;
     margin: 0 auto;
@@ -77,10 +71,10 @@
 }
 
 .circle2{
-    bottom: -77rem;
+    bottom: -30%;
     right: 31rem;
     position: absolute;
-    /* display: none; */
+    display: none;
     overflow: hidden;
 }
 
@@ -92,16 +86,15 @@
     background: linear-gradient(111deg, rgba(255,255,255,0.07) 0%, rgba(255,255,255,0.1) );
     /* opacity: 90%; */
     margin-top: 5rem;
-
-    width: 56.25rem;
-    /* background-filter: blur(10px); */
+    max-width: 56.25rem;
+    backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     z-index: 2;
     border-radius: 1.25rem;
     /* box-shadow: 3px 3px 3px rgb(22, 4, 43); */
-    padding: 2.5rem 0;
-    /* height:75vh; */
+    padding: 2.5rem 11.5rem;
+
 }
 
 .banner-text{
@@ -170,17 +163,261 @@ button:hover{
     cursor: pointer;
 }
 
-@media screen and (max-width : 480px) {
+@media only screen
+    and (min-width: 360px) 
+    and (max-width: 480px) 
+{
+    .banner{
+        width: 100%;
+        
+    }
+
+    .banner .container-b{
+        padding: 0 0.7rem;
+        max-width: 25.938rem;
+        width: 100%;
+    }
     .banner-con{
-        width: 25.938rem;
+        max-width: 25.938rem;
         border-radius: 0.625rem;
         margin-top: 5rem;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 1rem 3.1rem;
+    }
+
+    .circle2{
+        bottom: -35rem;
+        right: 4rem;
+        overflow: hidden;
+    }
+
+    .circle1,.circle2{
+        height: 15.25rem;
+        width: 12.5rem;
+    }
+
+    .banner-text{
+        width: auto;
+    }
+
+    .banner-text h1{
+        font-size: 10vw;
+    }
+
+    .banner-text p{
+        font-size: 5.5vw;
+
+    }
+
+    .banner-text p.sub{
+        font-size: 2.87vw;
+    }
+
+    .banner-text p.desc{
+        margin-bottom: 1rem;
+    }
+
+    .input{
+        margin-bottom: 1vh;
+
+    }
+
+    .input input{
+        padding: 0.313rem;
+        font-size: 3.2vw;
+    }
+
+    .input button{
+        font-size: 3.2vw;
+        padding: 0.313rem 1.063rem;
+    }
+
+    .text-popUp.active{
+        border-radius: 0;
+        height: 3vh;
+    }
+    .text-popUp.active h1{
+        font-size: 3.5vw;
+    }
+
+}
+
+@media only screen
+    and (min-width: 481px) 
+    and (max-width: 768px) 
+{
+    .banner{
+        width: 100%;
+        
+    }
+
+    .banner .container-b{
+        padding: 0 1rem;
+        max-width: 45rem;
+        width: 100%;
+    }
+    .banner-con{
+        max-width: 45rem;
+        border-radius: 0.625rem;
+        margin-top: 5rem;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 4vh 14vw;
+    }
+
+    .circle2{
+        bottom: -90%;
+        right: 32%;
+        overflow: hidden;
+    }
+
+    .circle1,.circle2{
+        height: 15.25rem;
+        width: 12.5rem;
+    }
+
+    .banner-text{
+        width: auto;
+    }
+
+    .banner-text h1{
+        font-size: 10vw;
+    }
+
+    .banner-text p{
+        font-size: 5.5vw;
+
+    }
+
+    .banner-text p.sub{
+        font-size: 2.87vw;
+    }
+
+    .banner-text p.desc{
+        margin-bottom: 1rem;
+    }
+
+    .input{
+        margin-bottom: 1vh;
+
+    }
+
+    .input input{
+        padding: 0.313rem;
+        font-size: 2.5vw;
+    }
+
+    .input button{
+        font-size: 2.5vw;
+        padding: 0.313rem 1.063rem;
+    }
+
+    .text-popUp.active{
+        border-radius: 0;
+        height: 3vh;
+    }
+    .text-popUp.active h1{
+        font-size: 3.5vw;
+    }
+
+}
+
+@media only screen
+    and (min-width: 769px) 
+    and (max-width: 1024px) 
+{
+    .banner{
+        /* max-width: 56.25rem; */
+        width: 100%;
+    }
+
+    .banner .container-b{
+        padding: 0 1.5rem;
+        max-width: 56.25rem;
+        width: 100%;
+    }
+
+    .banner-con{
+        max-width: 56.25rem;
+        border-radius: 1.25rem;
+        margin-top: 5rem;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 4vh 14vw;
+    }
+    
+    .circle2{
+        bottom: -90%;
+        right: 25%;
+        overflow: hidden;
+    }
+
+    .circle1,.circle2{
+        height: 30.25rem;
+        width: 27.5rem;
+    }
+
+    .banner-text{
+        width: auto;
+    }
+    .banner-text h1{
+        font-size: 9vw;
+    }
+
+    .banner-text p{
+        font-size: 4vw;
+
+    }
+
+    .banner-text p.sub{
+        font-size: 2vw;
+    }
+
+    .input{
+        margin-bottom: 1vh;
+
+    }
+
+    .input input{
+        padding: 0.313rem;
+        font-size: 2vw;
+    }
+
+    .input button{
+        font-size: 2vw;
+        padding: 0.313rem 1.063rem;
+    }
+
+    .text-popUp.active{
+        border-radius: 0;
+        height: 3vh;
+    }
+    .text-popUp.active h1{
+        font-size: 2.5vw;
+    }
+
+}
+
+
+
+/* @media screen and (max-width : 480px) {
+    .banner-con{
+        max-width: 25.938rem;
+        border-radius: 0.625rem;
+        margin-top: 5rem;
+        padding: 1rem 2.5rem;
     }
 
     .circle2{
         bottom: -45rem;
         right: 1rem;
         overflow: hidden;
+    }
+
+    .circle1,.circle2{
+        height: 15.25rem;
+        width: 12.5rem;
     }
 
     .banner-text{
@@ -219,4 +456,4 @@ button:hover{
         font-size: 0.938rem;
     }
 
-}
+} */
