--- a/src/Component/Contact.css
+++ b/src/Component/Contact.css
@@ -16,6 +16,15 @@
     width: 56.25rem;
     /* height: 100vh; */
 }
+.container-con .head-name{
+    background: linear-gradient(111deg, rgba(255,255,255,0.07) 0%, rgba(255,255,255,0.1) );
+    display:flex ;
+    backdrop-filter: blur(60px);
+    border-radius: 1.25rem ;
+    color: #fff;
+    margin-bottom: 1rem;
+    padding: 1.3rem 2rem;
+}
 
 .contact-con{
     display: flex;
@@ -34,12 +43,13 @@
 .contact-con .col-md-4{
     display: flex; 
     justify-content: space-between;
+    width: 100%;
     /* flex-direction: column; */
     align-items: center;
     background: linear-gradient(111deg, rgba(255,255,255,0.07) 0%, rgba(255,255,255,0.1) );
     backdrop-filter: blur(60px);
     border-radius: 1.25rem ;
-    padding: 1rem ;
+    padding: 1rem 2rem ;
 
 
 }
@@ -51,8 +61,8 @@
     align-items: center;
     width: fit-content;
     flex-direction: column;
-    width: 14.688rem;
-    height: 18.75rem;
+    max-width: 14.688rem;
+    max-height: 18.75rem;
     padding: 1.75rem;
 
  } 
@@ -76,14 +86,180 @@
     width: 6.25rem;
     height: 6.25rem;
     color: #FFF; 
-
 }
 
 .con-link .e-mail svg{
-    font-size: 6.25rem;
+    width: 6.25rem;
+    height: 6.25rem;
 }
 
-@media screen and (max-width : 480px) {
+@media only screen
+    and (min-width: 360px) 
+    and (max-width: 480px) 
+    /* and (-webkit-device-pixel-ratio: 3) { */
+{
+        .contact{
+            height: fit-content;
+        }
+
+        .container-con{
+            max-width: 25.938rem;
+            height: auto;
+            width: 100%;
+            padding: 0 0.7rem;
+            margin: 0 auto;
+        }
+
+        .contact-con{
+            max-width: 25.938rem;
+            /* width: 100%; */
+            /* padding: 0 0.7rem; */
+        }
+
+        .container-con .head-name{
+            padding: 0.813rem;
+            border-radius: 0.625rem;
+            /* margin: 0 auto; */
+            margin-bottom: 1rem;  
+            max-width: 25.938rem;
+        
+        }.container-con .head-name h1{
+            font-size: 4vw;
+        }
+    
+        .contact-con .col-md-4{
+            border-radius: 0.625rem;
+            max-width: 25.938rem;
+            width: 100%;
+
+        }
+    
+        .col-md-4 .con-link{
+            max-width: 7.375rem;
+            max-height: 9.375rem;
+            padding: 0;
+    
+        }
+    
+        .col-md-4 .con-link svg{
+            max-width: 17vw;
+            max-height: 17vw;
+        }
+    
+        .col-md-4 .con-link p{
+            font-size: 2.05vw ;
+            margin-bottom: 0.625rem;
+            
+        }
+    
+        .col-md-4 .con-link a{
+            font-size: 2.1vw ;
+            
+        }
+    
+        .col-md-4 .con-link a:hover{
+            font-size: 2.1vw ;
+            font-weight: 700;
+        }
+
+}
+
+
+@media only screen
+    and (min-width: 481px) 
+    and (max-width: 768px) 
+{
+    .contact{
+        height: fit-content;
+    }
+
+    .container-con{
+        max-width: 45rem;
+        height: auto;
+        width: 100%;
+        padding: 0 1rem;
+        margin: 0 auto;
+    }
+
+    .contact-con{
+        max-width:45rem;
+        /* width: 100%; */
+        /* padding: 0 0.7rem; */
+    }
+
+    .container-con .head-name{
+        padding: 0.813rem;
+        border-radius: 0.625rem;
+        /* margin: 0 auto; */
+        margin-bottom: 1rem;  
+        max-width: 45rem;
+    
+    }.container-con .head-name h1{
+        font-size: 4vw;
+    }
+
+    .contact-con .col-md-4{
+        border-radius: 0.625rem;
+        padding: 2rem;
+        /* max-width: 45rem; */
+        /* width: 100%; */
+
+    }
+
+    .col-md-4 .con-link{
+        max-width: 10rem;
+        max-height: 14rem;
+        padding: 0;
+
+    }
+
+    .col-md-4 .con-link svg{
+        width: 25vw;
+        height: 25vw;
+    }
+
+    .col-md-4 .con-link p{
+        font-size: 2vw ;
+        margin-bottom: 0.625rem;
+        
+    }
+
+    .col-md-4 .con-link a{
+        float: inline-end;
+        font-size: 2vw ;
+        
+    }
+
+    .col-md-4 .con-link a:hover{
+        font-size: 2vw ;
+        font-weight: 700;
+    }
+
+
+}
+@media only screen
+    and (min-width: 769px) 
+    and (max-width: 1024px) 
+{
+    .container-con{
+        max-width: 56.25rem;
+        height: auto;
+        width: 100%;
+        padding: 0 1.5rem;
+        margin: 0 auto;
+    }
+
+    .contact-con{
+        max-width: 56.25rem;
+    }
+
+    .container-con .head-name{
+        max-width: 56.35rem;
+    }
+
+}
+
+/* @media screen and (max-width : 480px) {
     .head-name{
         max-width: 25.938rem;
     }
@@ -129,4 +305,5 @@
         font-size:0.625rem ;
         font-weight: 700;
     }
-}
+} */
+
