--- a/src/Component/Experience.css
+++ b/src/Component/Experience.css
@@ -5,7 +5,7 @@
 }
 
 .container-ex{
-    width: 56.25rem;
+    max-width: 56.25rem;
     height: auto;
     margin: 0 auto;
 }
@@ -221,36 +221,59 @@
     margin-right: 3rem ;
 }
 
-@media screen and (max-width : 480px) {
-    .head-name{
-        max-width: 25.938rem;
-       
-    }
 
+@media only screen
+    and (min-width: 360px) 
+    and (max-width: 480px) 
+    
+{
+    .experience{
+        justify-content: unset;
+        width: 100%;
+    }
     .container-ex{
         max-width: 25.938rem;
         flex-direction: column;
-        flex: none;
+        padding: 0 0.7rem;
+        margin: 0 auto;
+    }
+    .container-ex .head-name{
+        padding: 0.813rem;
+        border-radius: 0.625rem;
+        margin: 0 auto;
+        margin-bottom: 1rem;
+        max-width: 25.938rem;
+    }
+    .container-ex .head-name h1{
+        font-size: 4vw;
+       
     }
 
     .ex-con{
         flex-direction: column;
         border-radius: 0.625rem;
+        /* max-width: 25.938rem; */
+
     }
 
-    .ex-description{
-        width: 100%;
-    }
+
     .tech{
         margin-top: 0;
         justify-content: space-between;
     }
 
+    .line-bot{
+        padding: 0 1rem;
+    }
+    .machine-learning{
+        padding: 0 1rem;
+    }
+
     .line-bot h3{
-        font-size:0.75rem;
+        font-size: 2.5vw;
     }
     .line-bot p{
-        font-size:0.625rem;
+        font-size: 2.1vw;
     }
 
     .line-bot .using-line{
@@ -262,12 +285,12 @@
     }
 
     .line-bot .using-line p{
-        font-size: 0.625rem;
+        font-size: 2.1vw;
         margin-top: 0.313rem;
     }
 
     .line-bot .use-line p{
-        font-size: 0.625rem;
+        font-size: 2.1vw;
         margin-top: 0.313rem;
 
     }
@@ -276,11 +299,11 @@
         margin-top: 0;
     }
     .machine-learning h3{
-        font-size: 0.75rem;
+        font-size: 2.5vw;
     }
 
     .machine-learning p{
-        font-size: 0.625rem;
+        font-size: 2.1vw;
         margin: 0;
     }
 
@@ -296,11 +319,11 @@
     }
 
     .machine-learning .using-machine p{
-        font-size: 0.625rem;
+        font-size: 2.1vw;
         margin-top: 0.313rem;
     }
     .machine-learning .use-machine p{
-        font-size: 0.625rem;
+        font-size: 2.1vw;
         margin-top: 0.313rem;
     }
 
@@ -326,21 +349,28 @@
         
     }
 
-    .line-img img{
-        max-width: 4.938rem;
-        max-height: 8.281rem;
+    .line-img .demo img{
+        /* max-width: 4.938rem;
+        max-height: 8.281rem; */
+        width: 16vw;
+        height: 19vh;
+        border-radius: 0;
+        
     }
 
     .line-img .demo video{
-        max-width: 4.938rem;
-        max-height: 8.281rem;
+        width: 16vw;
+        height: 19vh;
+        border-radius: 0;
+        /* max-width: 4.938rem;
+        max-height: 8.281rem; */
     }
 
     .line-img .demo{
         margin-right: 0.625rem;
     }
     .line-img .demo p{
-        font-size: 0.635rem;
+        font-size: 2.1vw;
     }
 
     .machine-demo{
@@ -353,22 +383,297 @@
         padding: 1.5rem 0;
         justify-content: center;
         margin: 0 ;
-        /* align-items: center; */
+        align-items: center;
     }
 
     .machine-img .demo img{
-        /* max-width: 158px; */
-        max-height: 6.25rem;
+        max-height: 20vw;
         display: flex;
         margin-right: 0;
         
-    }
+    } 
 
     .machine-img .demo{
         margin-right: 1.875rem;
     }
 
     .machine-img .demo p{
-        font-size: 0.625rem;
+        font-size: 2.1vw;
     }
+} 
+
+
+@media only screen
+    and (min-width: 481px) 
+    and (max-width: 768px) 
+{
+    .experience{
+        justify-content: unset;
+        width: 100%;
+    }
+    .container-ex{
+        max-width: 45rem;
+        flex-direction: column;
+        padding: 0 1rem;
+        margin: 0 auto;
+    }
+    .container-ex .head-name{
+        padding: 0.813rem;
+        border-radius: 0.625rem;
+        margin: 0 auto;
+        margin-bottom: 1rem;
+        max-width: 45rem;
+    }
+    .container-ex .head-name h1{
+        font-size: 4vw;
+       
+    }
+
+    .ex-con{
+        flex-direction: column;
+        border-radius: 0.625rem;
+    }
+
+    .tech{
+        margin-top: 0;
+        justify-content: space-between;
+    }
+
+    .line-bot{
+        padding: 0 1rem;
+    }
+    .machine-learning{
+        padding: 0 1rem;
+    }
+
+    .line-bot h3{
+        font-size: 2.5vw;
+    }
+    .line-bot p{
+        font-size: 2.1vw;
+    }
+
+    .line-bot .using-line{
+        border-top: none;
+    }
+
+    .line-bot .use-line{
+        border-top: none;
+    }
+
+    .line-bot .using-line p{
+        font-size: 2.1vw;
+        margin-top: 0.313rem;
+    }
+
+    .line-bot .use-line p{
+        font-size: 2.1vw;
+        margin-top: 0.313rem;
+
+    }
+
+    .machine-learning{
+        margin-top: 0;
+    }
+    .machine-learning h3{
+        font-size: 2.5vw;
+    }
+
+    .machine-learning p{
+        font-size: 2.1vw;
+        margin: 0;
+    }
+
+    .machine-learning .using-machine{
+        border-top: none;
+        margin-top: 0.625rem;
+    }
+
+    .machine-learning .use-machine{
+        border-top: none;
+        margin-top: 0.625rem;
+
+    }
+
+    .machine-learning .using-machine p{
+        font-size: 2.1vw;
+        margin-top: 0.313rem;
+    }
+    .machine-learning .use-machine p{
+        font-size: 2.1vw;
+        margin-top: 0.313rem;
+    }
+
+    .ex-con .ex-demo{
+        max-width: 45rem;
+        padding: 1rem;
+        margin-right: 0;
+        margin-top: 0.625rem;
+        padding-bottom:0 ;
+    }
+
+    .ex-demo .line-demo{
+        padding: 4vw;
+        max-height: 19.5rem;
+        max-width: 41rem;
+        border-radius: 0.625rem;
+        margin: 0;
+        justify-content: none;
+        
+    }
+
+    .line-img{
+        max-width: 45rem;
+        
+    }
+
+    .line-img .demo{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin-right: 5vw;
+        max-height: 15rem;
+    }
+
+    .line-img .demo img{
+        /* max-width: 4.938rem;
+        max-height: 8.281rem; */
+        width: 14.5vw;
+        height: 30.5vw;
+        border-radius: 0;
+        
+        
+    }
+
+    .line-img .demo video{
+        max-width: 15.5vw;
+        max-height: 30.5vh;
+        border-radius: 0;
+        /* max-width: 4.938rem;
+        max-height: 8.281rem; */
+    }
+
+    
+    .line-img .demo p{
+        font-size: 2.1vw;
+    }
+
+    .machine-demo{
+        display: flex;
+        justify-content: center;
+        border-radius: 0.625rem;
+    }
+
+    .machine-demo .machine-img{
+        padding: 1.5rem 0;
+        justify-content: center;
+        margin: 0 ;
+        align-items: center;
+    }
+
+    .machine-img .demo img{
+        height: 20vw;
+        display: flex;
+        margin-right: 0;
+        
+    } 
+
+    .machine-img .demo{
+        margin-right: 10vw;
+        /* max-height: 20rem; */
+    }
+
+    .machine-img .demo p{
+        font-size: 2.1vw;
+    }
+
+}
+
+@media only screen
+    and (min-width: 769px) 
+    and (max-width: 1024px) 
+{
+    .experience{
+        width: 100%;
+    }
+    .container-ex{
+        max-width: 56.25rem;
+        padding: 0 1.5rem;
+        margin: 0 auto;
+    }
+    .container-ex .head-name{
+        max-width: 56.25rem;
+    }
+
+    .line-img .demo img{
+        /* max-width: 4.938rem;
+        max-height: 8.281rem; */
+        width: 9.5vw;
+        height: 18.5vw;
+        border-radius: 0;
+        
+        
+    }
+    .line-bot{
+        padding: 0 1rem;
+    }
+
+    .machine-learning{
+        padding: 0 1rem;
+    }
+
+    .line-img{
+        max-width: 56.25rem;
+        
+    }
+
+    .machine-learning .using-machine{
+        margin-top: 0.5rem;
+    }
+
+    .machine-learning .use-machine{
+        margin-top: 0.5rem;
+
+    }
+
+    .line-img .demo p{
+        font-size: 1.5vw;
+    }
+
+    .line-img .demo video{
+        max-width: 9.5vw;
+        max-height: 18.5vw;
+        border-radius: 0;
+        /* max-width: 4.938rem;
+        max-height: 8.281rem; */
+    }
+
+    .machine-img .demo p{
+        font-size: 1.5vw;
+    }
+
+    .machine-img .demo img{
+        height: 12vw;
+        display: flex;
+        margin-right: 0;
+        
+    } 
+
+    .machine-demo{
+        height: 20rem;
+    }
+
+    .machine-demo .machine-img{
+        padding: 4rem 0;
+        justify-content: center;
+        margin: 0 ;
+        align-items: center;
+    }
+
+    .machine-learning .using-machine p{
+        font-size: 0.8rem;
+
+    }
+
+
 }
