--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@ body {
   font-family: 'Ubuntu', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background:linear-gradient(to right bottom, #1F0045 70%, #3d0990);
+  /* background:linear-gradient(to right bottom, #1F0045 70%, #3d0990); */
+  background: linear-gradient(328.78deg, #030086 14.45%, #BD6177 84.36%), linear-gradient(301.28deg, #209B4A 0%, #7000FF 100%), radial-gradient(100% 138.56% at 100% 0%, #D50000 0%, #00FFE0 100%), radial-gradient(100% 148.07% at 0% 0%, #D50000 0%, #00FFFF 100%);
+background-blend-mode: soft-light, overlay, difference, normal;
   background-repeat: no-repeat;
   background-attachment: fixed;
   overscroll-behavior-y:none ;
