--- a/src/Component/Banner.css
+++ b/src/Component/Banner.css
@@ -51,7 +51,7 @@
 
 
 .circle1,.circle2{
-    display: flex;
+    display: none;
     position: absolute;
     /* background-color: red; */
     background:linear-gradient(to right bottom, #0c21aa 30%, #973fcf 100%);
